add_subdirectory(AntTweakBar)
add_subdirectory(cinder)
add_subdirectory(glload)
add_subdirectory(jsoncpp)
add_subdirectory(libtess2)
add_subdirectory(linebreak)
add_subdirectory(oggvorbis)
add_subdirectory(r8brain)
add_subdirectory(tinyexr)

if (MSVC)
	add_subdirectory(videoInput)
endif()

add_sources()