add_subdirectory(books)
add_subdirectory(modes)

add_sources(analysis.c
			backends.h
			bitrate.c
			bitrate.h
			block.c
			codebook.c
			codebook.h
			codec_internal.h
			envelope.c
			envelope.h
			floor0.c
			floor1.c
			highlevel.h
			info.c
			lookup.c
			lookup.h
			lookup_data.h
			lpc.c
			lpc.h
			lsp.c
			lsp.h
			mapping0.c
			masking.h
			mdct.c
			mdct.h
			misc.h
			modes
			os.h
			psy.c
			psy.h
			registry.c
			registry.h
			res0.c
			scales.h
			sharedbook.c
			smallft.c
			smallft.h
			synthesis.c
			vorbisenc.c
			vorbisfile.c
			window.c
			window.h)